[gd_scene load_steps=14 format=3 uid="uid://s4d0e5fb17t7"]

[ext_resource type="Script" uid="uid://de72ngjrif171" path="res://scripts/main_menu.gd" id="1_ekxnf"]
[ext_resource type="Texture2D" uid="uid://ngh4806fthtf" path="res://assets/menu_bg.jpg" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://dc5aq7eh6d6c5" path="res://assets/title_player.png" id="3_bqqt6"]
[ext_resource type="FontFile" uid="uid://ncehug2odtwn" path="res://assets/yoster-island.regular.ttf" id="4_wu84c"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ekxnf"]
texture = ExtResource("2_ekxnf")
modulate_color = Color(0.43712, 0.43712, 0.43712, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bqqt6"]
texture = ExtResource("3_bqqt6")

[sub_resource type="FontVariation" id="FontVariation_8ln24"]
base_font = ExtResource("4_wu84c")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bqqt6"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wu84c"]
bg_color = Color(0.585062, 0.585062, 0.585062, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 3
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ln24"]
bg_color = Color(0.316167, 0.316167, 0.316167, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 3
shadow_offset = Vector2(0, 3)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vue75"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
shadow_size = 3
shadow_offset = Vector2(0, 3)

[sub_resource type="FontVariation" id="FontVariation_rtw2f"]
base_font = ExtResource("4_wu84c")

[sub_resource type="FontVariation" id="FontVariation_oa1go"]
base_font = ExtResource("4_wu84c")

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_ekxnf")

[node name="Panel" type="Panel" parent="."]
offset_top = -57.0
offset_right = 1152.0
offset_bottom = 795.0
theme_override_styles/panel = SubResource("StyleBoxTexture_ekxnf")

[node name="Panel2" type="Panel" parent="."]
offset_left = 246.0
offset_top = 57.0
offset_right = 910.0
offset_bottom = 365.0
theme_override_styles/panel = SubResource("StyleBoxTexture_bqqt6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 330.0
offset_top = 361.0
offset_right = 807.0
offset_bottom = 581.0
theme_override_constants/separation = 15

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_8ln24")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqqt6")
theme_override_styles/hover = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Start Game"

[node name="Button3" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_rtw2f")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqqt6")
theme_override_styles/hover = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "How to Play"

[node name="Button4" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_oa1go")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqqt6")
theme_override_styles/hover = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Credits"

[node name="Button2" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_oa1go")
theme_override_font_sizes/font_size = 40
theme_override_styles/focus = SubResource("StyleBoxEmpty_bqqt6")
theme_override_styles/hover = SubResource("StyleBoxFlat_wu84c")
theme_override_styles/pressed = SubResource("StyleBoxFlat_8ln24")
theme_override_styles/normal = SubResource("StyleBoxFlat_vue75")
text = "Exit"

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/Button3" to="." method="_on_how_to_pressed"]
[connection signal="pressed" from="VBoxContainer/Button4" to="." method="_on_button_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_exit_pressed"]
